# native-obfuscator

./: .gitignore  README.md  config.yml  main.go  pom.xml  сниппеты
src/main/resources/assets/: CMakeLists.txt  (+1 more)
work/: config.yml
work/output/cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AntiAutistLeak.sln  AntiAutistLeak.vcxproj  AntiAutistLeak.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dllmain.cpp  table.h
work/output/cpp/AntiAutistLeak.dir/Debug/: AntiAutistLeak.dll.recipe  AntiAutistLeak.ilk
work/output/cpp/AntiAutistLeak.dir/Debug/AntiAutistLeak.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
work/output/cpp/AntiAutistLeak.dir/Release/AntiAutistLeak.tlog/: AntiAutistLeak.lastbuildstate  CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
work/output/cpp/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
work/output/cpp/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
work/output/cpp/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
work/output/cpp/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
work/try_catch/: j2c_try-catch.jar.BACKUP
work/try_catch/cpp/: dllmain.cpp
(+69 files in other folders)
